# routes/api.php
@@ -67,6 +67,7 @@ Route::POST('user/login-inline',function(Request $request)    {
 Route::POST('user/login', [UserController::class, 'login']);
 Route::GET('list/{id}',[FilterController::class,'getList']);
 Route::POST('user/signup', [UserController::class, 'signup']);
+Route::GET('user/save-token', [UserController::class, 'savedeviceToken']);
 
 Route::GET('whouse',[WhouseController::class, 'index']);
 Route::GET('whouse/{id}',[WhouseController::class, 'view']);
